# jpegkit-android

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: demo.cpp
app/src/main/java/jpegkit/app/: JpegActivity.java  (+1 more)
app/src/main/res/drawable/: ic_flip.xml  ic_rotate.xml
app/src/main/res/layout/: activity_jpeg.xml  activity_main.xml  jpeg_item.xml
app/src/main/res/menu/: jpeg.xml  main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
jpegkit/: CMakeLists.txt  build.gradle
jpegkit/src/main/: AndroidManifest.xml  CMakeLists.txt
jpegkit/src/main/cpp/: JniJpeg.cpp  JniJpegTransformer.cpp
jpegkit/src/main/cpp/jpegkit/: jpeg.cpp  render.cpp  tjwrapper.cpp
jpegkit/src/main/cpp/jpegkit/include/: platform.h
jpegkit/src/main/cpp/libjpeg/include/: jdhuff.h  jpegint.h  jpeglib.h  transupp.h
jpegkit/src/main/java/com/camerakit/jpegkit/: JpegTransformer.java
jpegkit/src/main/java/com/jpegkit/: Jpeg.java  JpegDecoder.java  JpegEncoder.java  JpegFile.java  JpegHandler.java  JpegImageView.java  JpegKit.java  JpegKitException.java  JpegTransformer.java  JpegView.java  PixelAllocation.java
jpegkit/src/main/java/jpegkit/: Jpeg.java  JpegDecoder.java  JpegEncoder.java  JpegFile.java  JpegHandler.java  JpegImageView.java  JpegKit.java  JpegKitException.java  JpegTransformer.java  JpegView.java  PixelAllocation.java
jpegkit/src/main/java/libjpeg/: TurboJpeg.kt
jpegkit/src/main/res/values/: strings.xml
(+4 files in other folders)
